# CSCI-UA-473

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  process_data.py  process_images.py  pyproject.toml
docs/: installation_guide.md
labs/lab0_trying_vibe_coding/: problem.py
labs/lab1_dungeon_and_tensor/: game_logic.py  game_state.py  levels.py  save_load.py  ui_components.py
labs/lab2_optimization/: data_utils.py  gradient_clipping.py  gradient_descent.py  loss_functions.py  loss_surface.py  visualization.py
labs/lab3_embeddings_retrieval/: embeddings_playground.py  level_checks.py
labs/lab5_pca_autoencoder/: pca_playground.py
pages/: 10_Lab_0_Trying_Vibe_Coding.py  11_Lab_1_Dungeon_and_Tensor.py  12_Lab_2_Downhill_Descent.py  13_Lab_3_Embeddings_and_Retrieval.py
scripts/lab0/: activate_env.sh  setup_env.sh  verify_installation.py
utils/: security.py  ui.py
